# android-icon-compliance-resizer

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SKILL.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md
references/: android_icon_requirements.md
scripts/: __init__.py  generate_icon_previews.py  pack_android_icons.py  validate_android_icons.py
tests/: test_cli_smoke.py
